# transcriber

./: .gitignore  CLI_USAGE.md  COLAB_QUICK_START.md  COLAB_README.md  COLAB_SETUP_GUIDE.md  INSTALL.md  README.md  README_file_transcription.md  VISUAL_ENHANCEMENTS.md  google_drive_transcription.ipynb  pyproject.toml  test_debug_mode.sh  test_output.txt  transcript  transcript_colab.ipynb
.cursor/rules/: code-standards.mdc
colab/: file_transcript.ipynb  file_transcription_notebook.ipynb
transcript_pkg/: __init__.py  cli.py  file_transcribe.py  live_transcribe.py
